# TelegramMCBE

./: .poggit.yml  LICENSE  README.md
.github/workflows/: pylint.yml
bot/: .gitignore  loader.py  pyproject.toml
bot/configs/: keyboards.yml  main.yml  main_config.yml  messages.yml
bot/handlers/labelers/: default.py  keyboards.py  rules.py
bot/handlers/routers/: default.py  rules.py
bot/managers/: __init__.py  configs_manager.py  database_manager.py  hash_manager.py  rcon.py  rcon_manager.py
bot/routers/aiogram/: __init__.py  default.py  filters.py  keyboards.py
bot/routers/fastapi/: __init__.py  default.py  rules.py
bot/tests/: async_rcon.py  auth_bearer.py
bot/utils/: __init__.py
dont_touch_me/: env_template.md  installation.md
mcbe_plugin/: plugin.yml
mcbe_plugin/dependencies/RconServer/: plugin.yml
mcbe_plugin/resources/: config.yml
mcbe_plugin/src/Taskovich/VkConnector/: EventListener.php  Main.php
mcbe_plugin/src/Taskovich/VkConnector/commands/: Command.php  LinkToVkCommand.php  SecretCommand.php
mcbe_plugin/src/Taskovich/VkConnector/managers/: LinkedPlayersManager.php
mcbe_plugin/src/Taskovich/VkConnector/tasks/: AsyncSavePlayerSkin.php  AsyncSendVkCode.php
mcbe_plugin/src/Taskovich/VkConnector/utils/: Requests.php  Utils.php  (+1 more)
mcpe_plugin/: plugin.yml
mcpe_plugin/dependencies/PlayedTime/: LICENSE  plugin.yml
mcpe_plugin/src/Taskovich/VkConnector/: Main.php
plugin/: plugin.yml
plugin/dependencies/PlayedTime/: plugin.yml
plugin/dependencies/RconServer/src/: RconThread.php
plugin/resources/: config.yml
plugin/src/Taskovich/TelegramMCBE/: Main.php
plugin/src/Taskovich/VkConnector/: Main.php
(+26 files in other folders)
